--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ select = C,E,F,W,B,B950
 ignore = E203, E231, E501, W503, W291, W293
 
 [tox]
-envlist = py36-django31, {py37, py38, py39}-django{32}, core
+envlist = {py37, py38, py39}-django{32}, core
 
 [testenv]
 setenv =
@@ -13,7 +13,6 @@ setenv =
     core: DJANGO_SETTINGS_MODULE = testauth.settings_core
 
 deps=
-    django31: Django>=3.1,<3.2
     django-webtest
     coverage
 
