Making discordproxy an optional dependency

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ setenv =
     core: DJANGO_SETTINGS_MODULE = testauth.settings_core
 
 deps=
+    !core: discordproxy
     django-webtest
     coverage
 
