--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
 
 pre-commit-check:
   stage: checks
-  image: python:3.7-bullseye
+  image: python:3.8-bullseye
   variables:
     PRE_COMMIT_HOME: ${CI_PROJECT_DIR}/.cache/pre-commit
   cache:
@@ -25,14 +25,17 @@ pre-commit-check:
 
 .test-py37:
   stage: test
+  needs: []
   image: python:3.7-bullseye
 
 .test-py38:
   stage: test
+  needs: []
   image: python:3.8-bullseye
 
 .test-py39:
   stage: test
+  needs: []
   image: python:3.9-bullseye
 
 test-37-django32:
@@ -60,7 +63,7 @@ test-core:
 
 deploy-pypi:
   stage: deploy
-  image: python:3.7-bullseye
+  image: python:3.8-bullseye
 
   before_script:
     - pip install twine
