Migrate build process to PEP 621

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,10 +66,10 @@ deploy-pypi:
   image: python:3.8-bullseye
 
   before_script:
-    - pip install twine
+    - pip install build twine
 
   script:
-    - python setup.py sdist bdist_wheel
+    - python -m build
     - twine upload dist/*
 
   only:
