--- a/.coveragerc
+++ b/.coveragerc
@@ -11,7 +11,6 @@ exclude_lines =
 ignore_errors = True
 omit =
     setup.py
-    freight/tests.py
     freight/tests/*
     freight/migrations/*
-    doc/*
+    docs/*
