--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ select = C,E,F,W,B,B950
 ignore = E203, E231, E501, W503, W291, W293
 
 [tox]
-envlist = {py37, py38, py39}-django{32}, core
+envlist = {py38, py39, py310, py311}-django{40}, core
 
 [testenv]
 setenv =
@@ -13,7 +13,6 @@ setenv =
     core: DJANGO_SETTINGS_MODULE = testauth.settings_core
 
 deps=
-    allianceauth<3
     !core: discordproxy
     django-webtest
     coverage
