--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,16 +3,9 @@ stages:
 - test
 - deploy
 
-before_script:
-- apt-get update
-- apt-get install redis-server -y
-- redis-server --daemonize yes
-- python -V
-- pip install tox
-
 pre-commit-check:
   stage: checks
-  image: python:3.8-bullseye
+  image: python:3.10-bullseye
   variables:
     PRE_COMMIT_HOME: ${CI_PROJECT_DIR}/.cache/pre-commit
   cache:
@@ -22,48 +15,51 @@ pre-commit-check:
     - pip install pre-commit
     - pre-commit run --all-files
 
+.test:
+  before_script:
+    - apt-get update
+    - apt-get install redis-server -y
+    - redis-server --daemonize yes
+    - python -V
+    - pip install tox
 
-.test-py37:
-  stage: test
-  needs: []
-  image: python:3.7-bullseye
-
-.test-py38:
-  stage: test
-  needs: []
+test-38-django40:
+  extends: .test
   image: python:3.8-bullseye
+  script:
+  - tox -e py38-django40
+  - bash <(curl -s https://codecov.io/bash)
 
-.test-py39:
-  stage: test
-  needs: []
+test-39-django40:
+  extends: .test
   image: python:3.9-bullseye
-
-test-37-django32:
-  extends: .test-py37
   script:
-  - tox -e py37-django32
+  - tox -e py39-django40
   - bash <(curl -s https://codecov.io/bash)
 
-test-38-django32:
-  extends: .test-py38
+test-310-django40:
+  extends: .test
+  image: python:3.10-bullseye
   script:
-  - tox -e py38-django32
+  - tox -e py310-django40
   - bash <(curl -s https://codecov.io/bash)
 
-test-39-django32:
-  extends: .test-py39
+test-311-django40:
+  extends: .test
+  image: python:3.11-bullseye
   script:
-  - tox -e py39-django32
+  - tox -e py311-django40
   - bash <(curl -s https://codecov.io/bash)
 
 test-core:
-  extends: .test-py37
+  extends: .test
+  image: python:3.10-bullseye
   script:
   - tox -e core
 
 deploy-pypi:
   stage: deploy
-  image: python:3.8-bullseye
+  image: python:3.10-bullseye
 
   before_script:
     - pip install build twine
