--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,28 +8,29 @@ dynamic = ["version"]
 description = "Freight is an Alliance Auth app for running a freight service"
 readme = "README.md"
 license = "MIT"
-requires-python = "~=3.7"
+requires-python = ">=3.8"
 authors = [
     { name = "Erik Kalkoken", email = "kaloken87@gmail.com" },
 ]
 classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.0",
     "Intended Audience :: End Users/Desktop",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
 dependencies = [
-    "allianceauth-app-utils>=1.12",
-    "allianceauth>=2.15.1",
-    "dhooks-lite>=0.5.0",
+    "allianceauth-app-utils>=1.18.0",
+    "allianceauth>=3.0.0",
+    "dhooks-lite>=0.6.1",
     "django-navhelper",
 ]
 
